Modify thread pool, add nav volume data structure, add construct nav volume method draft to editor

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\NavPath.cs" />
+    <Compile Include="Assets\NavVolume.cs" />
     <Compile Include="Assets\Obstacle.cs" />
     <Compile Include="Assets\Scripts\PathFollower.cs" />
     <Compile Include="Assets\ThreadPool.cs" />
